[project]
maintainers = [{name = "German Diago Gomez", email = "german@hydrolix.io"}]


[tool.poetry]
name = "hdxcli"
version = "1.0-rc31"
description = "Hydrolix command line utility to do CRUD operations on projects, tables, transforms and other resources in Hydrolix clusters"
authors = ["German Diago Gomez <german@hydrolix.io>"]
license = "MIT license"
keywords = ["database", "bigdata", "hydrolix"]
classifiers = ["Development Status :: 3 - Alpha",
               "Topic :: Database",
               "Topic :: Database :: Front-Ends"]
readme = "README.md"
packages = [
    { include = "hdx_cli", from = "src" }
]

[tool.poetry.scripts]
hdxcli = "hdx_cli.main:main"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
click = "^8.1.3"
requests = "^2.28.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
# pyinstaller = "^5.3"
# Nuitka = "^1.0.6"
# zstandard = "^0.18.0"
pytest = "^7.1.3"
# types-toml = "^0.10.8"
# types-requests = "^2.28.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
